# OOP_final

./: .gitignore  README.md
BeautyWho/: BeautyWho.sln
BeautyWho/BeautyWho/: BeautyWho.cpp  BeautyWho.h  BeautyWho.qrc  BeautyWho.qrc.txt  BeautyWho.ui  BeautyWho.vcxproj  BeautyWho.vcxproj.filters  main.cpp  style.qss
BeautyWho/BeautyWho/Backend/: ImageProcess.h
MeiTuShop/: MeiTuShop.sln
MeiTuShop/MeiTuShop/: CMakeLists.txt  ImageProcess.h  MeiTuShop.aps  MeiTuShop.cpp  MeiTuShop.h  MeiTuShop.pri  MeiTuShop.pro  MeiTuShop.qrc  MeiTuShop.rc  MeiTuShop.ui  MeiTuShop.vcxproj  MeiTuShop.vcxproj.filters  image_test.cpp  main.cpp
