CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET(PROJECT_NAME MeituShop)
PROJECT(${PROJECT_NAME})
add_compile_options(-std=c++11)
FIND_PACKAGE(OpenCV REQUIRED)
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
#AUX_SOURCE_DIRECTORY(. DIR_SRCS)
ADD_EXECUTABLE(${PROJECT_NAME} image_test.cpp ImageProcess.h)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${OpenCV_LIBS})