CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET(PROJECT_NAME MeituShop)
PROJECT(${PROJECT_NAME})
add_compile_options(-std=c++11)
FIND_PACKAGE(OpenCV REQUIRED)

FIND_PACKAGE(Qt5Widgets)
FIND_PACKAGE(Qt5Core)
set_target_properties(Qt5::Core PROPERTIES MAP_IMPORTED_CONFIG_COVERAGE "RELEASE")
foreach (plugin ${Qt5Network_PLUGINS})
    get_target_property(_loc ${plugin} LOCATION)
    message("Plugin ${plugin} is at location ${_loc}")
endforeach ()
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)

INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
#AUX_SOURCE_DIRECTORY(. DIR_SRCS)
ADD_EXECUTABLE(${PROJECT_NAME} image_test.cpp ImageProcess.h)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${OpenCV_LIBS} Qt5::Widgets)